--- a/styles/xacaro_landingpage/xacaro.scss
+++ b/styles/xacaro_landingpage/xacaro.scss
@@ -64,7 +64,7 @@ body {
     font-weight: 700;
     letter-spacing: -2px;
     text-align: center;
-    text-shadow: 0px 6px 14px #00000040;
+    text-shadow: 0px 6px 10px #00000033;
   }
   .banner_text_2 {
     font-family: "Montserrat";
@@ -125,15 +125,6 @@ body {
     }
   }
 
-  @media only screen and (max-width: 340px) {
-    .rotate_image {
-      z-index: -1;
-      position: absolute;
-      top: -27%;
-      left: 29%;
-      animation: 10s rotate_image infinite alternate-reverse;
-    }
-  }
   @media only screen and (max-width: 767px) {
     .banner_text_1 {
       margin-bottom: 24px;
@@ -151,15 +142,12 @@ body {
     }
   }
 
-  @media only screen and (max-width: 576px) {
-    .first_section_new {
-      margin-top: 10px;
-
-      .wait_listBtn {
-        width: 80px;
-        height: 80px;
-        font-size: 14px;
-      }
+  @media only screen and (max-width: 500px) {
+    margin-top: 10px;
+    .banner_text_1 {
+    }
+    .banner_text_2 {
+      letter-spacing: 0;
     }
   }
 }
@@ -261,14 +249,15 @@ body {
             margin: 0px;
           }
           .percent {
-            width: 52px;
-            height: 22px;
+            width: 50px;
+            height: 20 px;
             border-radius: 12px;
             background-color: #e8fdf3;
             color: #0f8d50;
             padding: 1px 6px;
             margin-left: 6px;
             margin: 0px;
+            text-align: center;
             font-family: "Montserrat";
           }
           .returns {
@@ -283,6 +272,7 @@ body {
             display: flex;
             justify-content: flex-end;
             align-items: center;
+            gap: 6px;
           }
           .investing_percentage {
             display: flex;
@@ -365,7 +355,6 @@ body {
 
           .investing_slider {
             position: relative;
-
             .value_slider {
               top: 4px;
               height: 10px;
@@ -392,12 +381,41 @@ body {
               height: 22px;
               border: 0;
               margin-top: -7px;
-              background: url("../../assets/images/thumb.svg");
+              background: url("../../assets/images/thumb_.png");
+
               background-repeat: no-repeat;
               cursor: pointer;
               z-index: 10;
             }
             .investing_slider_range::-webkit-slider-runnable-track {
+              height: 8px;
+              border-radius: 10px;
+              width: 30px;
+              z-index: 10;
+            }
+            input[type="range"] {
+              -webkit-appearance: none;
+              appearance: none;
+              width: 100%;
+              height: 10px;
+              border-radius: 8px;
+              background: #f0f3f5;
+              position: relative;
+            }
+            input[type="range"]::-moz-range-thumb {
+              appearance: none;
+              width: 20px;
+              height: 22px;
+              border: 0;
+              margin-top: -7px;
+              background: url("../../assets/images/thumb_.png");
+
+              background-repeat: no-repeat;
+              cursor: pointer;
+              position: relative;
+              z-index: 9999ss;
+            }
+            input[type="range"]::-moz-range-track {
               height: 8px;
               border-radius: 10px;
               width: 30px;
@@ -502,12 +520,39 @@ body {
             height: 22px;
             border: 0;
             margin-top: -7px;
-            background: url("../../assets/images/thumb.svg");
+            background: url("../../assets/images/thumb_.png");
             background-repeat: no-repeat;
             cursor: pointer;
             z-index: 10;
           }
           .performance_range::-webkit-slider-runnable-track {
+            height: 8px;
+            border-radius: 10px;
+            width: 30px;
+            z-index: 10;
+          }
+          input[type="range"] {
+            -webkit-appearance: none;
+            appearance: none;
+            width: 100%;
+            height: 10px;
+            border-radius: 8px;
+            background: #f0f3f5;
+            position: relative;
+          }
+          input[type="range"]::-moz-range-thumb {
+            appearance: none;
+            width: 20px;
+            height: 22px;
+            border: 0;
+            margin-top: -7px;
+            background: url("../../assets/images/thumb_.png");
+            background-repeat: no-repeat;
+            cursor: pointer;
+            position: relative;
+            z-index: 9999ss;
+          }
+          input[type="range"]::-moz-range-track {
             height: 8px;
             border-radius: 10px;
             width: 30px;
@@ -599,12 +644,12 @@ body {
 
         .investing_year_range {
           -webkit-appearance: none;
-              appearance: none;
-              width: 100%;
-              height: 10px;
-              border-radius: 8px;
-              background: #f0f3f5;
-              position: relative;
+          appearance: none;
+          width: 100%;
+          height: 10px;
+          border-radius: 8px;
+          background: #f0f3f5;
+          position: relative;
         }
 
         .investing_year_range::-webkit-slider-thumb {
@@ -614,12 +659,39 @@ body {
           height: 22px;
           border: 0;
           margin-top: -7px;
-          background: url("../../assets/images/thumb.svg");
+          background: url("../../assets/images/thumb_.png");
           background-repeat: no-repeat;
           cursor: pointer;
           z-index: 10;
         }
         .investing_year_range::-webkit-slider-runnable-track {
+          height: 8px;
+          border-radius: 10px;
+          width: 30px;
+          z-index: 10;
+        }
+        input[type="range"] {
+          -webkit-appearance: none;
+          appearance: none;
+          width: 100%;
+          height: 10px;
+          border-radius: 8px;
+          background: #f0f3f5;
+          position: relative;
+        }
+        input[type="range"]::-moz-range-thumb {
+          appearance: none;
+          width: 20px;
+          height: 22px;
+          border: 0;
+          margin-top: -7px;
+          background: url("../../assets/images/thumb_.png");
+          background-repeat: no-repeat;
+          cursor: pointer;
+          position: relative;
+          z-index: 9999ss;
+        }
+        input[type="range"]::-moz-range-track {
           height: 8px;
           border-radius: 10px;
           width: 30px;
@@ -747,6 +819,10 @@ body {
     padding-right: 20px;
     padding-bottom: 10px;
 
+    .calculate_1 p {
+      font-weight: 500;
+    }
+
     .parent {
       display: block;
       .card_parent {
@@ -871,9 +947,16 @@ body {
           }
         }
         .investing_amount_box {
+          .investing_percentage {
+            padding: 10px 0px !important;
+          }
           .returns_percent {
             padding-top: 6px;
             text-align: center;
+            padding-top: 6px;
+            display: flex;
+            justify-content: center !important;
+            align-items: center;
           }
           .dollars_text {
             text-align: center;
@@ -1242,162 +1325,266 @@ body {
       }
     }
   }
-  @media only screen and (max-width: 530px) {
-    .timeline_root {
-      .direction_timeline {
-        display: flex !important;
-        flex-direction: column-reverse !important;
-      }
-      .conference-timeline-content {
-        padding-top: 0px;
-        width: 100%;
-        .center_line2 {
-          .center_line_img {
-            display: none;
-          }
-          .timeline-article {
-            padding-bottom: 10px;
-            .meta-date {
-              display: none;
-            }
-            .content-left-container {
-              margin: auto;
-              max-width: 290px;
-              width: 100%;
-              float: none;
-              min-height: 53px;
-              display: flex;
-              justify-content: center;
-              align-items: center;
-            }
-            .content-right-container {
-              margin: auto;
-              max-width: 290px;
-              width: 100%;
-              float: none;
-              min-height: 53px;
-              display: flex;
-              justify-content: center;
-              align-items: center;
-            }
-            .content-left {
-              width: 100%;
-              max-width: 290px;
-              padding: 0px 0px;
-              margin-top: 12px;
-            }
-            .content-right {
-              width: 100%;
-              max-width: 290px;
-              padding: 0px 0px;
-              margin-top: 12px;
-            }
-            .timeline_img {
-              width: 100%;
-              max-width: 200px;
-            }
-          }
-        }
-      }
-    }
-  }
-  @media only screen and (max-width: 400px) {
+  // @media only screen and (max-width: 530px) {
+  //   .timeline_root {
+  //     .direction_timeline {
+  //       display: flex !important;
+  //       flex-direction: column-reverse !important;
+  //     }
+  //     .conference-timeline-content {
+  //       padding-top: 0px;
+  //       width: 100%;
+  //       .center_line2 {
+  //         .center_line_img {
+  //           // display: none;
+  //         }
+  //         .timeline-article {
+  //           padding-bottom: 10px;
+  //           .meta-date {
+  //             // display: none;
+  //           }
+  //           .content-left-container {
+  //             margin: auto;
+  //             max-width: 290px;
+  //             width: 100%;
+  //             float: none;
+  //             min-height: 53px;
+  //             display: flex;
+  //             justify-content: center;
+  //             align-items: center;
+  //           }
+  //           .content-right-container {
+  //             margin: auto;
+  //             max-width: 290px;
+  //             width: 100%;
+  //             float: none;
+  //             min-height: 53px;
+  //             display: flex;
+  //             justify-content: center;
+  //             align-items: center;
+  //           }
+  //           .content-left {
+  //             width: 100%;
+  //             max-width: 290px;
+  //             padding: 0px 0px;
+  //             margin-top: 12px;
+  //           }
+  //           .content-right {
+  //             width: 100%;
+  //             max-width: 290px;
+  //             padding: 0px 0px;
+  //             margin-top: 12px;
+  //           }
+  //           .timeline_img {
+  //             width: 100%;
+  //             max-width: 200px;
+  //           }
+  //         }
+  //       }
+  //     }
+  //   }
+  // }
+  @media only screen and (max-width: 500px) {
     .work_1 p {
-      padding-top: 60px;
+      padding-left: 20px;
+      padding-right: 20px;
+      padding-top: 40px;
       font-size: 30px;
       font-weight: 700;
       line-height: 48px;
       text-align: center;
       color: black;
       font-family: "Kelvin";
-      padding-left: 20px;
-      padding-right: 20px;
     }
 
     .work_2 p {
+      padding-left: 20px;
+      padding-right: 20px;
       font-family: "Montserrat";
       padding-top: 16px;
-      font-size: 14px;
+      font-size: 18px;
       font-weight: 500;
       line-height: 24px;
       text-align: center;
       color: rgb(158, 155, 155);
     }
     .timeline_root {
+      display: flex;
+      justify-content: center;
+      align-items: center;
       .direction_timeline {
         display: flex !important;
         flex-direction: column-reverse !important;
       }
       .conference-timeline-content {
-        padding-top: 0px;
-        width: 100%;
+        margin-left: 0;
+        left: 50px;
         .center_line2 {
+          .center_line_img {
+            right: 0px;
+            left: 44px;
+            position: absolute;
+            top: 40px;
+            width: 100;
+            height: 40vh;
+            height: 80%;
+            max-width: 0px;
+            border: 1px solid #e5f3ff;
+          }
           .timeline-article {
+            display: block;
+            overflow: visible;
             padding-bottom: 0px;
-            margin-top: 20px;
+
             .meta-date {
+              margin-left: 0;
+              left: 20px;
+              top: 12%;
               height: 50px;
               width: 50px;
-              border-radius: 50%;
             }
             .content-left-container {
-              width: 100%;
-              max-width: 300px;
-              margin-bottom: 0px;
+              max-width: 100%;
+              width: auto;
+              float: none;
+              margin-left: 90px;
+              min-height: 53px;
+              margin-bottom: 20px;
             }
             .content-right-container {
-              width: 100%;
-              max-width: 300px;
-              margin-bottom: 0px;
+              max-width: 100%;
+              width: auto;
+              float: none;
+              margin-left: 90px;
+              min-height: 53px;
             }
             .content-left {
-              width: 100%;
-              min-width: 300px;
+              padding: 10px;
+              min-height: 65px;
 
-              .timeline_title {
-                font-weight: 600;
-                font-size: 24px;
-                color: #000000;
-                margin: 0px;
-                font-family: "Montserrat_bold";
+              .timeline_img {
+                width: 100%;
+                max-width: 300px;
+                max-height: 110px;
               }
-              .timeline_subtitle {
-                padding-top: 10px;
-                font-weight: 500;
-                font-size: 16px;
-                color: #c7c7c7;
-                margin: 0px;
-                font-family: "Montserrat";
+              &:before {
+                display: none;
               }
             }
             .content-right {
-              width: 100%;
-              min-width: 300px;
-              .timeline_title {
-                font-weight: 600;
-                font-size: 24px;
-                color: #000000;
-                margin: 0px;
-                font-family: "Montserrat_bold";
+              padding: 10px;
+              min-height: 65px;
+              .timeline_img {
+                width: 100%;
+                max-width: 300px;
+                max-height: 110px;
               }
-              .timeline_subtitle {
-                padding-top: 10px;
-                font-weight: 500;
-                font-size: 16px;
-                color: #c7c7c7;
-                margin: 0px;
-                font-family: "Montserrat";
+              &:before {
+                display: none;
               }
-            }
-            .timeline_img {
-              width: 100%;
-              max-width: 200px;
             }
           }
         }
       }
     }
   }
+  // @media only screen and (max-width: 400px) {
+  //   .work_1 p {
+  //     padding-top: 60px;
+  //     font-size: 30px;
+  //     font-weight: 700;
+  //     line-height: 48px;
+  //     text-align: center;
+  //     color: black;
+  //     font-family: "Kelvin";
+  //     padding-left: 20px;
+  //     padding-right: 20px;
+  //   }
+
+  //   .work_2 p {
+  //     font-family: "Montserrat";
+  //     padding-top: 16px;
+  //     font-size: 14px;
+  //     font-weight: 500;
+  //     line-height: 24px;
+  //     text-align: center;
+  //     color: rgb(158, 155, 155);
+  //   }
+  //   .timeline_root {
+  //     .direction_timeline {
+  //       display: flex !important;
+  //       flex-direction: column-reverse !important;
+  //     }
+  //     .conference-timeline-content {
+  //       padding-top: 0px;
+  //       width: 100%;
+  //       .center_line2 {
+  //         .timeline-article {
+  //           padding-bottom: 0px;
+  //           margin-top: 20px;
+  //           .meta-date {
+  //             height: 50px;
+  //             width: 50px;
+  //             border-radius: 50%;
+  //           }
+  //           .content-left-container {
+  //             width: 100%;
+  //             max-width: 300px;
+  //             margin-bottom: 0px;
+  //           }
+  //           .content-right-container {
+  //             width: 100%;
+  //             max-width: 300px;
+  //             margin-bottom: 0px;
+  //           }
+  //           .content-left {
+  //             width: 100%;
+  //             min-width: 300px;
+
+  //             .timeline_title {
+  //               font-weight: 600;
+  //               font-size: 24px;
+  //               color: #000000;
+  //               margin: 0px;
+  //               font-family: "Montserrat_bold";
+  //             }
+  //             .timeline_subtitle {
+  //               padding-top: 10px;
+  //               font-weight: 500;
+  //               font-size: 16px;
+  //               color: #c7c7c7;
+  //               margin: 0px;
+  //               font-family: "Montserrat";
+  //             }
+  //           }
+  //           .content-right {
+  //             width: 100%;
+  //             min-width: 300px;
+  //             .timeline_title {
+  //               font-weight: 600;
+  //               font-size: 24px;
+  //               color: #000000;
+  //               margin: 0px;
+  //               font-family: "Montserrat_bold";
+  //             }
+  //             .timeline_subtitle {
+  //               padding-top: 10px;
+  //               font-weight: 500;
+  //               font-size: 16px;
+  //               color: #c7c7c7;
+  //               margin: 0px;
+  //               font-family: "Montserrat";
+  //             }
+  //           }
+  //           .timeline_img {
+  //             width: 100%;
+  //             max-width: 200px;
+  //           }
+  //         }
+  //       }
+  //     }
+  //   }
+  // }
 }
 
 .cards_section {
@@ -1446,14 +1633,11 @@ body {
       }
     }
   }
-}
-
-@media only screen and (max-width: 390px) {
-  .cards_section {
-    padding: 20px;
-
+  @media only screen and (max-width: 500px) {
+    padding: 20px 0px;
     .card_container {
       .card_item {
+        width: 100%;
         min-width: 265px;
         .item_container {
           min-width: 250px;
@@ -1476,7 +1660,7 @@ body {
   position: relative;
   overflow: hidden;
   text-align: center;
-  margin: 15px;
+  margin-bottom: 10px;
 
   .container {
     display: flex;
