--- a/styles/xacaro_landingpage/xacaro.css
+++ b/styles/xacaro_landingpage/xacaro.css
@@ -365,6 +365,7 @@ body {
   border: 0;
   margin-top: -7px;
   background: url("../../assets/images/thumb_.png");
+  border-radius: 40%;
   background-repeat: no-repeat;
   cursor: pointer;
   z-index: 10;
@@ -393,6 +394,7 @@ body {
   border: 0;
   margin-top: -7px;
   background: url("../../assets/images/thumb_.png");
+  border-radius: 40%;
   background-repeat: no-repeat;
   cursor: pointer;
   position: relative;
@@ -495,6 +497,7 @@ body {
   height: 22px;
   border: 0;
   margin-top: -7px;
+  border-radius: 40%;
   background: url("../../assets/images/thumb_.png");
   background-repeat: no-repeat;
   cursor: pointer;
@@ -523,6 +526,7 @@ body {
   height: 22px;
   border: 0;
   margin-top: -7px;
+  border-radius: 40%;
   background: url("../../assets/images/thumb_.png");
   background-repeat: no-repeat;
   cursor: pointer;
@@ -626,6 +630,7 @@ body {
   height: 22px;
   border: 0;
   margin-top: -7px;
+  border-radius: 40%;
   background: url("../../assets/images/thumb_.png");
   background-repeat: no-repeat;
   cursor: pointer;
@@ -654,6 +659,7 @@ body {
   height: 22px;
   border: 0;
   margin-top: -7px;
+  border-radius: 40%;
   background: url("../../assets/images/thumb_.png");
   background-repeat: no-repeat;
   cursor: pointer;
