--- a/styles/xacaro_landingpage/xacaro.scss
+++ b/styles/xacaro_landingpage/xacaro.scss
@@ -382,7 +382,7 @@ body {
               border: 0;
               margin-top: -7px;
               background: url("../../assets/images/thumb_.png");
-
+              border-radius: 40%;
               background-repeat: no-repeat;
               cursor: pointer;
               z-index: 10;
@@ -409,7 +409,7 @@ body {
               border: 0;
               margin-top: -7px;
               background: url("../../assets/images/thumb_.png");
-
+              border-radius: 40%;
               background-repeat: no-repeat;
               cursor: pointer;
               position: relative;
@@ -520,6 +520,7 @@ body {
             height: 22px;
             border: 0;
             margin-top: -7px;
+            border-radius: 40%;
             background: url("../../assets/images/thumb_.png");
             background-repeat: no-repeat;
             cursor: pointer;
@@ -546,6 +547,7 @@ body {
             height: 22px;
             border: 0;
             margin-top: -7px;
+            border-radius: 40%;
             background: url("../../assets/images/thumb_.png");
             background-repeat: no-repeat;
             cursor: pointer;
@@ -659,6 +661,7 @@ body {
           height: 22px;
           border: 0;
           margin-top: -7px;
+          border-radius: 40%;
           background: url("../../assets/images/thumb_.png");
           background-repeat: no-repeat;
           cursor: pointer;
@@ -685,6 +688,7 @@ body {
           height: 22px;
           border: 0;
           margin-top: -7px;
+          border-radius: 40%;
           background: url("../../assets/images/thumb_.png");
           background-repeat: no-repeat;
           cursor: pointer;
