--- a/styles/xacaro_landingpage/xacaro.scss
+++ b/styles/xacaro_landingpage/xacaro.scss
@@ -382,7 +382,7 @@ body {
               border: 0;
               margin-top: -7px;
               background: url("../../assets/images/thumb_.png");
-              border-radius: 40%;
+              border-radius: 48%;
               background-repeat: no-repeat;
               cursor: pointer;
               z-index: 10;
@@ -409,7 +409,7 @@ body {
               border: 0;
               margin-top: -7px;
               background: url("../../assets/images/thumb_.png");
-              border-radius: 40%;
+              border-radius: 48%;
               background-repeat: no-repeat;
               cursor: pointer;
               position: relative;
@@ -522,7 +522,7 @@ body {
             margin-top: -7px;
             border-radius: 40%;
             background: url("../../assets/images/thumb_.png");
-            background-repeat: no-repeat;
+            background-repeat: no-rep48t;
             cursor: pointer;
             z-index: 10;
           }
@@ -549,7 +549,7 @@ body {
             margin-top: -7px;
             border-radius: 40%;
             background: url("../../assets/images/thumb_.png");
-            background-repeat: no-repeat;
+            background-repeat: no-rep48t;
             cursor: pointer;
             position: relative;
             z-index: 9999ss;
@@ -663,7 +663,7 @@ body {
           margin-top: -7px;
           border-radius: 40%;
           background: url("../../assets/images/thumb_.png");
-          background-repeat: no-repeat;
+          background-repeat: no-rep48t;
           cursor: pointer;
           z-index: 10;
         }
@@ -690,7 +690,7 @@ body {
           margin-top: -7px;
           border-radius: 40%;
           background: url("../../assets/images/thumb_.png");
-          background-repeat: no-repeat;
+          background-repeat: no-rep48t;
           cursor: pointer;
           position: relative;
           z-index: 9999ss;
