--- a/styles/xacaro_landingpage/xacaro.css
+++ b/styles/xacaro_landingpage/xacaro.css
@@ -361,7 +361,7 @@ body {
   -webkit-appearance: none;
   appearance: none;
   width: 20px;
-  height: 22px;
+  height: 20px;
   border: 0;
   margin-top: -7px;
   background: url("../../assets/images/thumb_.png");
@@ -390,7 +390,7 @@ body {
   -moz-appearance: none;
        appearance: none;
   width: 20px;
-  height: 22px;
+  height: 20px;
   border: 0;
   margin-top: -7px;
   background: url("../../assets/images/thumb_.png");
@@ -398,7 +398,7 @@ body {
   background-repeat: no-repeat;
   cursor: pointer;
   position: relative;
-  z-index: 9999ss;
+  z-index: 9999;
 }
 .calculate_section .parent .card_parent .calculate_card .investing_amout_slider .investing_slider input[type=range]::-moz-range-track {
   height: 8px;
@@ -494,7 +494,7 @@ body {
   -webkit-appearance: none;
   appearance: none;
   width: 20px;
-  height: 22px;
+  height: 20px;
   border: 0;
   margin-top: -7px;
   border-radius: 40%;
@@ -523,7 +523,7 @@ body {
   -moz-appearance: none;
        appearance: none;
   width: 20px;
-  height: 22px;
+  height: 20px;
   border: 0;
   margin-top: -7px;
   border-radius: 40%;
@@ -627,7 +627,7 @@ body {
   -webkit-appearance: none;
   appearance: none;
   width: 20px;
-  height: 22px;
+  height: 20px;
   border: 0;
   margin-top: -7px;
   border-radius: 40%;
@@ -656,7 +656,7 @@ body {
   -moz-appearance: none;
        appearance: none;
   width: 20px;
-  height: 22px;
+  height: 20px;
   border: 0;
   margin-top: -7px;
   border-radius: 40%;
