--- a/styles/xacaro_landingpage/xacaro.scss
+++ b/styles/xacaro_landingpage/xacaro.scss
@@ -378,7 +378,7 @@ body {
               -webkit-appearance: none;
               appearance: none;
               width: 20px;
-              height: 22px;
+              height: 20px;
               border: 0;
               margin-top: -7px;
               background: url("../../assets/images/thumb_.png");
@@ -405,7 +405,7 @@ body {
             input[type="range"]::-moz-range-thumb {
               appearance: none;
               width: 20px;
-              height: 22px;
+              height: 20px;
               border: 0;
               margin-top: -7px;
               background: url("../../assets/images/thumb_.png");
@@ -413,7 +413,7 @@ body {
               background-repeat: no-repeat;
               cursor: pointer;
               position: relative;
-              z-index: 9999ss;
+              z-index: 9999;
             }
             input[type="range"]::-moz-range-track {
               height: 8px;
@@ -517,7 +517,7 @@ body {
             -webkit-appearance: none;
             appearance: none;
             width: 20px;
-            height: 22px;
+            height: 20px;
             border: 0;
             margin-top: -7px;
             border-radius: 40%;
@@ -544,7 +544,7 @@ body {
           input[type="range"]::-moz-range-thumb {
             appearance: none;
             width: 20px;
-            height: 22px;
+            height: 20px;
             border: 0;
             margin-top: -7px;
             border-radius: 40%;
@@ -658,7 +658,7 @@ body {
           -webkit-appearance: none;
           appearance: none;
           width: 20px;
-          height: 22px;
+          height: 20px;
           border: 0;
           margin-top: -7px;
           border-radius: 40%;
@@ -685,7 +685,7 @@ body {
         input[type="range"]::-moz-range-thumb {
           appearance: none;
           width: 20px;
-          height: 22px;
+          height: 20px;
           border: 0;
           margin-top: -7px;
           border-radius: 40%;
