--- a/styles/xacaro_landingpage/xacaro.scss
+++ b/styles/xacaro_landingpage/xacaro.scss
@@ -381,7 +381,7 @@ body {
               height: 20px;
               border: 0;
               margin-top: -7px;
-              background: url("../../assets/images/thumb_.png");
+              background: url("../../assets/images/thumb.svg");
               border-radius: 48%;
               background-repeat: no-repeat;
               cursor: pointer;
@@ -408,7 +408,7 @@ body {
               height: 20px;
               border: 0;
               margin-top: -7px;
-              background: url("../../assets/images/thumb_.png");
+              background: url("../../assets/images/thumb.svg");
               border-radius: 48%;
               background-repeat: no-repeat;
               cursor: pointer;
@@ -521,7 +521,7 @@ body {
             border: 0;
             margin-top: -7px;
             border-radius: 40%;
-            background: url("../../assets/images/thumb_.png");
+            background: url("../../assets/images/thumb.svg");
             background-repeat: no-rep48t;
             cursor: pointer;
             z-index: 10;
@@ -548,7 +548,7 @@ body {
             border: 0;
             margin-top: -7px;
             border-radius: 40%;
-            background: url("../../assets/images/thumb_.png");
+            background: url("../../assets/images/thumb.svg");
             background-repeat: no-rep48t;
             cursor: pointer;
             position: relative;
@@ -662,7 +662,7 @@ body {
           border: 0;
           margin-top: -7px;
           border-radius: 40%;
-          background: url("../../assets/images/thumb_.png");
+          background: url("../../assets/images/thumb.svg");
           background-repeat: no-rep48t;
           cursor: pointer;
           z-index: 10;
@@ -689,7 +689,7 @@ body {
           border: 0;
           margin-top: -7px;
           border-radius: 40%;
-          background: url("../../assets/images/thumb_.png");
+          background: url("../../assets/images/thumb.svg");
           background-repeat: no-rep48t;
           cursor: pointer;
           position: relative;
