--- a/styles/xacaro_landingpage/xacaro.css
+++ b/styles/xacaro_landingpage/xacaro.css
@@ -361,7 +361,7 @@ body {
   -webkit-appearance: none;
   appearance: none;
   width: 20px;
-  height: 20px;
+  height: 22px;
   border: 0;
   margin-top: -7px;
   background: url("../../assets/images/thumb.svg");
@@ -390,7 +390,7 @@ body {
   -moz-appearance: none;
        appearance: none;
   width: 20px;
-  height: 20px;
+  height: 22px;
   border: 0;
   margin-top: -7px;
   background: url("../../assets/images/thumb.svg");
@@ -494,7 +494,7 @@ body {
   -webkit-appearance: none;
   appearance: none;
   width: 20px;
-  height: 20px;
+  height: 22px;
   border: 0;
   margin-top: -7px;
   border-radius: 40%;
@@ -523,7 +523,7 @@ body {
   -moz-appearance: none;
        appearance: none;
   width: 20px;
-  height: 20px;
+  height: 22px;
   border: 0;
   margin-top: -7px;
   border-radius: 40%;
@@ -627,7 +627,7 @@ body {
   -webkit-appearance: none;
   appearance: none;
   width: 20px;
-  height: 20px;
+  height: 22px;
   border: 0;
   margin-top: -7px;
   border-radius: 40%;
@@ -656,7 +656,7 @@ body {
   -moz-appearance: none;
        appearance: none;
   width: 20px;
-  height: 20px;
+  height: 22px;
   border: 0;
   margin-top: -7px;
   border-radius: 40%;
@@ -762,7 +762,7 @@ body {
     padding-right: 50px;
   }
 }
-@media only screen and (max-width: 560px) {
+@media only screen and (max-width: 560px) and (-webkit-min-device-pixel-ratio: 2) {
   .calculate_section {
     padding-left: 20px;
     padding-right: 20px;
@@ -807,6 +807,79 @@ body {
     font-size: 11px;
     color: #0d1822;
     font-family: "Montserrat";
+  }
+  .calculate_section .parent .card_parent .investing_amout_slider .investing_slider {
+    position: relative;
+  }
+  .calculate_section .parent .card_parent .investing_amout_slider .investing_slider .value_slider {
+    top: 4px;
+    height: 10px;
+    border-bottom-left-radius: 4px;
+    border-top-left-radius: 4px;
+    position: absolute;
+    background: #0088ff;
+    z-index: 1;
+  }
+  .calculate_section .parent .card_parent .investing_amout_slider .investing_slider .investing_slider_range {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+         appearance: none;
+    width: 100%;
+    height: 10px;
+    border-radius: 8px;
+    background: #f0f3f5;
+    position: relative;
+  }
+  .calculate_section .parent .card_parent .investing_amout_slider .investing_slider .investing_slider_range::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 20px;
+    height: 22px;
+    border: 0;
+    margin-top: -7px;
+    background: url("../../assets/images/thumb.svg");
+    border-radius: 48%;
+    background-repeat: no-repeat;
+    cursor: pointer;
+    z-index: 10;
+    box-shadow: none;
+  }
+  .calculate_section .parent .card_parent .investing_amout_slider .investing_slider .investing_slider_range::-webkit-slider-runnable-track {
+    height: 8px;
+    border-radius: 10px;
+    width: 30px;
+    z-index: 10;
+  }
+  .calculate_section .parent .card_parent .investing_amout_slider .investing_slider input[type=range] {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+         appearance: none;
+    width: 100%;
+    height: 10px;
+    border-radius: 8px;
+    background: #f0f3f5;
+    position: relative;
+  }
+  .calculate_section .parent .card_parent .investing_amout_slider .investing_slider input[type=range]::-moz-range-thumb {
+    -moz-appearance: none;
+         appearance: none;
+    width: 20px;
+    height: 22px;
+    border: 0;
+    margin-top: -7px;
+    background: url("../../assets/images/thumb.svg");
+    border-radius: 48%;
+    background-repeat: no-repeat;
+    cursor: pointer;
+    position: relative;
+    box-shadow: none;
+    z-index: 9999;
+  }
+  .calculate_section .parent .card_parent .investing_amout_slider .investing_slider input[type=range]::-moz-range-track {
+    height: 8px;
+    border-radius: 10px;
+    width: 30px;
+    z-index: 10;
   }
   .calculate_section .parent .card_parent .performance_slider .option_mobile {
     display: block !important;
