--- a/styles/xacaro_landingpage/xacaro.scss
+++ b/styles/xacaro_landingpage/xacaro.scss
@@ -378,7 +378,7 @@ body {
               -webkit-appearance: none;
               appearance: none;
               width: 20px;
-              height: 20px;
+              height: 22px;
               border: 0;
               margin-top: -7px;
               background: url("../../assets/images/thumb.svg");
@@ -405,7 +405,7 @@ body {
             input[type="range"]::-moz-range-thumb {
               appearance: none;
               width: 20px;
-              height: 20px;
+              height: 22px;
               border: 0;
               margin-top: -7px;
               background: url("../../assets/images/thumb.svg");
@@ -517,7 +517,7 @@ body {
             -webkit-appearance: none;
             appearance: none;
             width: 20px;
-            height: 20px;
+            height: 22px;
             border: 0;
             margin-top: -7px;
             border-radius: 40%;
@@ -544,7 +544,7 @@ body {
           input[type="range"]::-moz-range-thumb {
             appearance: none;
             width: 20px;
-            height: 20px;
+            height: 22px;
             border: 0;
             margin-top: -7px;
             border-radius: 40%;
@@ -658,7 +658,7 @@ body {
           -webkit-appearance: none;
           appearance: none;
           width: 20px;
-          height: 20px;
+          height: 22px;
           border: 0;
           margin-top: -7px;
           border-radius: 40%;
@@ -685,7 +685,7 @@ body {
         input[type="range"]::-moz-range-thumb {
           appearance: none;
           width: 20px;
-          height: 20px;
+          height: 22px;
           border: 0;
           margin-top: -7px;
           border-radius: 40%;
@@ -817,7 +817,7 @@ body {
     }
   }
 }
-@media only screen and (max-width: 560px) {
+@media only screen and (max-width: 560px)and (-webkit-min-device-pixel-ratio: 2) {
   .calculate_section {
     padding-left: 20px;
     padding-right: 20px;
@@ -867,6 +867,77 @@ body {
               font-size: 11px;
               color: #0d1822;
               font-family: "Montserrat";
+            }
+          }
+          .investing_slider {
+            position: relative;
+            .value_slider {
+              top: 4px;
+              height: 10px;
+              border-bottom-left-radius: 4px;
+              border-top-left-radius: 4px;
+              position: absolute;
+              background: #0088ff;
+              z-index: 1;
+            }
+            .investing_slider_range {
+              -webkit-appearance: none;
+              appearance: none;
+              width: 100%;
+              height: 10px;
+              border-radius: 8px;
+              background: #f0f3f5;
+              position: relative;
+            }
+
+            .investing_slider_range::-webkit-slider-thumb {
+              -webkit-appearance: none;
+              appearance: none;
+              width: 20px;
+              height: 22px;
+              border: 0;
+              margin-top: -7px;
+              background: url("../../assets/images/thumb.svg");
+              border-radius: 48%;
+              background-repeat: no-repeat;
+              cursor: pointer;
+              z-index: 10;
+              box-shadow: none;
+            }
+            .investing_slider_range::-webkit-slider-runnable-track {
+              height: 8px;
+              border-radius: 10px;
+              width: 30px;
+              z-index: 10;
+            }
+            input[type="range"] {
+              -webkit-appearance: none;
+              appearance: none;
+              width: 100%;
+              height: 10px;
+              border-radius: 8px;
+              background: #f0f3f5;
+              position: relative;
+            }
+            input[type="range"]::-moz-range-thumb {
+              appearance: none;
+              width: 20px;
+              height: 22px;
+              border: 0;
+              margin-top: -7px;
+              background: url("../../assets/images/thumb.svg");
+              border-radius: 48%;
+              background-repeat: no-repeat;
+              cursor: pointer;
+              position: relative;
+              box-shadow: none;
+              z-index: 9999;
+            }
+            input[type="range"]::-moz-range-track {
+              height: 8px;
+              border-radius: 10px;
+              width: 30px;
+              z-index: 10;
             }
           }
         }
