--- a/styles/xacaro_landingpage/xacaro.scss
+++ b/styles/xacaro_landingpage/xacaro.scss
@@ -813,7 +813,7 @@ body {
     }
   }
 }
-@media only screen and (max-width: 560px) {
+@media only screen and (max-width: 560px) and (-webkit-min-device-pixel-ratio: 2) {
   .calculate_section {
     padding-left: 20px;
     padding-right: 20px;
