--- a/styles/xacaro_landingpage/xacaro.scss
+++ b/styles/xacaro_landingpage/xacaro.scss
@@ -856,7 +856,7 @@ body {
               border: 0;
               margin-top: -7px;
               background: url("../../assets/images/thumb_.png");
-
+              box-shadow: none;
               background-repeat: no-repeat;
               cursor: pointer;
               z-index: 10;
@@ -909,7 +909,7 @@ body {
               border: 0;
               margin-top: -7px;
               background: url("../../assets/images/thumb_.png");
-
+              box-shadow: none;
               background-repeat: no-repeat;
               cursor: pointer;
               z-index: 10;
@@ -962,7 +962,7 @@ body {
               border: 0;
               margin-top: -7px;
               background: url("../../assets/images/thumb_.png");
-
+              box-shadow: none;
               background-repeat: no-repeat;
               cursor: pointer;
               z-index: 10;
