--- a/styles/xacaro_landingpage/xacaro.css
+++ b/styles/xacaro_landingpage/xacaro.css
@@ -756,7 +756,7 @@ body {
     padding-right: 50px;
   }
 }
-@media only screen and (max-width: 560px) {
+@media only screen and (max-width: 560px) and (-webkit-min-device-pixel-ratio: 2) {
   .calculate_section {
     padding-left: 20px;
     padding-right: 20px;
@@ -798,6 +798,7 @@ body {
     border: 0;
     margin-top: -7px;
     background: url("../../assets/images/thumb_.png");
+    box-shadow: none;
     background-repeat: no-repeat;
     cursor: pointer;
     z-index: 10;
@@ -849,6 +850,7 @@ body {
     border: 0;
     margin-top: -7px;
     background: url("../../assets/images/thumb_.png");
+    box-shadow: none;
     background-repeat: no-repeat;
     cursor: pointer;
     z-index: 10;
@@ -900,6 +902,7 @@ body {
     border: 0;
     margin-top: -7px;
     background: url("../../assets/images/thumb_.png");
+    box-shadow: none;
     background-repeat: no-repeat;
     cursor: pointer;
     z-index: 10;
